friday morning session
up to matching languages in basic idea

--- a/the-basic-idea.tex
+++ b/the-basic-idea.tex
@@ -59,9 +59,8 @@ The light head bears the external case, and the relative pronoun bears the inter
 \ex. light head\scsub{ext} [\tsc{rp}\scsub{int} ... ]\label{ex:light+rel}
 
 In a headless relative, either the light head or the relative pronoun is absent.
-For the light head to be absent, it needs to form a constituent within the other element (i.e. the light head or the relative pronoun).
 
-To see what a light-headed relative looks like, consider the light-headed relative in \ref{ex:ohg-light-headed}.
+To see what a light-headed relative looks like, consider the Old High German light-headed relative in \ref{ex:ohg-light-headed}. The relative clause, including the relative pronoun, is marked in bold.
 \tit{Thér} `\tsc{lh}.\tsc{sg}.\tsc{m}.\tsc{nom}' is the light head of the relative clause. This is the element that appears in the external case, the case that reflects the grammatical role in the main clause.
 \tit{Then} `\tsc{rp}.\tsc{sg}.\tsc{m}.\tsc{acc}' is the relative pronoun in the relative clause. This is the element that appears in the internal case, the case that reflects the grammatical role within the relative clause.
 
@@ -71,30 +70,11 @@ To see what a light-headed relative looks like, consider the light-headed relati
  `Isn't this now the one, who you seek to kill?'\label{ex:ohg-light-headed}
 
 The difference between a light-headed relative and a headless relative is that in a headless relative either the light head or the relative pronoun does not surface.
-The surfacing element is the one that bears the winning case, and the absent element is the one that bears the losing case. This means that what I have so far been glossing as and calling the relative pronoun is actually sometimes the light head and sometimes the relative pronoun. To reflect that, I call the surfacing element from now on the surface pronoun.
+The surfacing element is the one that bears the winning case, and the absent element is the one that bears the losing case. This means that what I have so far been glossing as the relative pronoun and calling the relative pronoun is actually sometimes the light head (when the relative pronoun is deleted) and sometimes the relative pronoun (when the light head is deleted). To reflect that, I call the surfacing element from now on the surface pronoun.
 
-Table \ref{tbl:options-surface-pronoun} lists the two options that I just laid out plus an additional one.
-The first option is that the relative pronoun, which bears the internal case, appears as the surface pronoun. The second option is that the light head, which bears the external case, appears as the surface pronoun. The third option is that there is no grammatical form for the surface pronoun.
-
-\begin{table}[htbp]
-  \center
-  \caption{Options for the surface pronoun}
-\begin{tabular}{ccc}
-  \toprule
-surface pronoun             \\
-\cmidrule(lr){1-1}
-light head\scsub{ext}       \\
-\tsc{rp}\scsub{int} \\
-{*}                         \\
-\bottomrule
-\end{tabular}
-\label{tbl:options-surface-pronoun}
-\end{table}
-
-I propose that whether or the surface pronoun is the light head, the relative pronoun or none of them depends on whether one of the elements (i.e. the light head or the relative pronoun) can delete the other.
-The light head appears as the surface pronoun when the light head can delete the relative pronoun. The relative pronoun appears as the surface pronoun when the relative pronoun can delete the light head. There is no grammatical surface pronoun possible when neither of them can delete the other one.
-
-Whether or not one element can delete the other depends on the comparison between the two. Specifically, it depends on the comparison of the constituents they consist of. Light heads and relative pronouns do not only correspond to case features, but also to other features (having to do with number, gender, etc.). It differs per language how language organize these features into constituents. In this chapter, I illustrate how these different constituents within light heads and relative pronouns lead to the differences in whether or not the light head and the relative pronoun can be deleted, and therefore to different language types.
+This brings me to my second assumption, which concerns the circumstances under which the light head or the relative pronoun can be deleted. A light head or a relative pronoun can be deleted when its content can be recovered. The content can be recovered when there is an antecedent which contains the deleted element.
+For light heads and relative pronouns this means that one of them can be absent when it forms a constituent within the other element.\footnote{In Section \ref{sec:three-types} I show constituent containment is also a necessary requirement in other types of deletion operations.}
+In other words, it depends on the comparison between the light head and the relative pronoun which one of them is absent. Specifically, it depends on the comparison of the constituents that the two elements consist of. Note that it is also possible that neither of the elements form a constituent within the other one. The consequence is then that neither of them is deleted, which describes the situation in which there is no grammatical headless relative.
 
 In order to be able to compare the light head and the relative pronoun, I zoom in on their syntactic structures. In Chapter \ref{ch:deriving-onlyinternal} to \ref{ch:discussing-unrestricted} I give arguments to support the structures I am assuming here. Figure \ref{fig:rel-lh-intonly} gives a simplified representation of them.
 
@@ -126,45 +106,61 @@ In order to be able to compare the light head and the relative pronoun, I zoom i
   \label{fig:rel-lh-intonly}
 \end{figure}
 
-The light head and the relative pronoun partly contain the same syntactic features. The features they have in common are case features (\tsc{k}) and what I here simplify as phi-features (ϕ). The light head and the relative pronoun differ from each other in that the relative pronoun has at least one feature in addition, which I call here \tsc{rel}.
+I assume that the light head and the relative pronoun partly contain the same syntactic features. The features they have in common are case features (\tsc{k}) and what I here simplify as phi-features (ϕ). The light head and the relative pronoun differ from each other in that the relative pronoun has at least one feature in addition, which I call here \tsc{rel}.
 
 This system excludes the external-only type. An external-only type would be one in which the light head can delete the relative pronoun, but the relative pronoun cannot delete the light head. In my proposal, an element can be deleted if forms a constituent within the other element. Relative pronouns always contain one more feature than light heads: \tsc{rel}. From that it follows that the light head does not contain all features that the relative pronoun contains. Therefore, it is impossible for a relative pronoun to form a constituent within the light head.
 
-Summing up this section, I make four assumptions. First, headless relative clauses are derived from light-headed relatives. Light-headed relatives contain a light head and relative pronoun. Second, in a headless relative either the light head or the relative pronoun is deleted. This happens when one of them forms a constituent within the other.
+My last assumption makes crucial use of Nanosyntax. I assume that the only way in which languages differ is in their lexicon: different languages contain different lexical entries. In Nanosyntax, lexical entries have the form of constitutions, as those are the only objects that can be spelled out. This means that languages differ in how they organize their features into constituents. This has consequences for the deletion of light heads and relative pronouns, since they need to be contained in the other the be deleted. For light heads and relative pronouns the crucial difference is whether phi-features are case features are each spelled out by their own lexical entry or whether they form a portmanteau.
+
+Summing up this section, I make four assumptions. My first assumption is that headless relative clauses are derived from light-headed relatives. Light-headed relatives contain a light head and relative pronoun. In a headless relative either the light head or the relative pronoun is deleted.
+My second assumption is that the necessary requirement for deletion is that the deleted element (either the light head or relative pronoun) forms a constituent within the other element. My third assumption is that light heads and relative pronouns contain the same features, and that the relative pronoun contains one additional feature: \tsc{rel}. My last assumption is that the only way in which languages differ is in their lexicon, which contains different constituents with features that correspond to phonology.
 
 
+\section{The three language types}\label{sec:three-types}
 
-I propose that the three attested different language types can be derived from this set of assumptions. The differences between them do not arise from changing the feature content of the light head and relative pronoun per language. Instead, the differences come from how the light heads and relative pronouns are spelled out.
+In this I show how different types of constituency leads to different patterns in differences in whether or not the light head and the relative pronoun is deleted, and therefore to different language types. In Chapters \ref{ch:deriving-onlyinternal} to \ref{ch:discussing-unrestricted}, I motivate the constituency I propose for each of the languages, and I go through the derivations in detail.
 
+For each of the three languages types, I first give the constituency within light heads and relative pronouns. Then I compare the constituents of the two elements when they appear in different cases, which is (i) when the cases on the light head and the relative pronoun match, (ii) when the relative pronoun bears the more complex case, and (iii) when the light head bears the more complex case. I show for each of the language types that the correct results are derived in the different situations.
 
-\section{The three patterns}
+\subsection{The internal-only type}
 
+I start with the internal-only language type. In this type of language, the constituency is as shown in Figure \ref{fig:rel-lh-intonly-1}.
 
-In the next three sections, I briefly give the intuition behind how spellout generates the three attested language types.
-I take the internal-only type as the point of departure.
-The matching type differs from the internal-only type in that different constituents are formed. This is a consequence of having multiple morphemes spelling out different portions of the structure instead of having a single morpheme.
-The unrestricted type differs from the two other types in that it even different constituents are formed. In addition, it uses the same lexical entry for different portions of the structure. This is the consequence of there being a sycnretism.
-
-
-As I mentioned, I take the internal-only type as the point of departure.
-In internal-only languages, headless relatives are grammatical when the internal and the external case match and when the internal case is more complex than the external case. Headless relatives are ungrammatical when the external case is more complex than the internal case. That means that the relative pronoun can delete the light head, but the light head cannot delete the relative pronoun. I show this in \ref{tbl:overview-rel-light-mg}.
-
-\begin{table}[htbp]
+\begin{figure}[htbp]
   \center
-  \caption{Grammaticality in the internal-only type}
-\begin{tabular}{cc}
-  \toprule
-                                        & surface pronoun         \\
-  \cmidrule(lr){2-2}
-\tsc{k}\scsub{int} = \tsc{k}\scsub{ext} & \tsc{rp}\scsub{int/ext} \\
-\tsc{k}\scsub{int} > \tsc{k}\scsub{ext} & \tsc{rp}\scsub{int}     \\
-\tsc{k}\scsub{int} < \tsc{k}\scsub{ext} & *                       \\
-\bottomrule
-\end{tabular}
-\label{tbl:overview-rel-light-mg}
-\end{table}
+  \begin{tabular}[b]{ccc}
+      \toprule
+      light head & & relative pronoun \\
+      \cmidrule(lr){1-1} \cmidrule(lr){3-3}
+      \begin{forest} boom
+      [\tsc{k}P,
+          [\tsc{k}]
+          [ϕP
+              [\phantom{xxx}, roof, baseline]
+          ]
+      ]
+      \end{forest}
+      & \phantom{x} &
+    \begin{forest} boom
+      [\tsc{rel}P
+          [\tsc{rel}P
+              [\phantom{xxx}, roof, baseline]
+          ]
+          [\tsc{k}P
+              [\tsc{k}]
+              [ϕP
+                  [\phantom{xxx}, roof, baseline]
+              ]
+          ]
+      ]
+    \end{forest}\\
+      \bottomrule
+  \end{tabular}
+   \caption {\tsc{lh} and \tsc{rp} in the internal-only type}
+  \label{fig:rel-lh-intonly-1}
+\end{figure}
 
-I go through the three types of situations in given in Table \ref{tbl:overview-rel-light-mg}. I show that the relative pronoun can delete the light head when they have the same case and when it has a more complex case. There is no grammatical result when the external case is more complex.
+The \tsc{k}P is spelled out a whole, including the ϕP. The \tsc{rel}P has its own spellout and is merged as a prefix to the \tsc{k}P. Chapter \ref{ch:deriving-onlyinternal} motivates this analysis.
 
 In Figure \ref{fig:nom-nom-intonly}, I give an example in which the relative pronoun and the light head bear the same case.
 
@@ -184,13 +180,17 @@ In Figure \ref{fig:nom-nom-intonly}, I give an example in which the relative pro
         fit to=tree]{};
         }
             [\tsc{f}1]
-            [ϕP, baseline]
+            [ϕP
+                [\phantom{xxx}, roof, baseline]
+            ]
         ]
       \end{forest}
       & \phantom{x} &
       \begin{forest} boom
         [\tsc{rel}P
-            [\tsc{rel}]
+            [\tsc{rel}P
+                [\phantom{xxx}, roof, baseline]
+            ]
             [\tsc{nom}P,
             tikz={
             \node[draw,circle,
@@ -199,7 +199,9 @@ In Figure \ref{fig:nom-nom-intonly}, I give an example in which the relative pro
             fit to=tree]{};
             }
                 [\tsc{f}1]
-                [ϕP, baseline]
+                [ϕP
+                    [\phantom{xxx}, roof, baseline]
+                ]
             ]
         ]
       \end{forest}\\
@@ -230,13 +232,17 @@ In Figure \ref{fig:nom-acc-intonly}, I give an example in which the relative pro
         fit to=tree]{};
         }
             [\tsc{f}1]
-            [ϕP, baseline]
+            [ϕP
+                [\phantom{xxx}, roof, baseline]
+            ]
         ]
       \end{forest}
       & \phantom{x} &
       \begin{forest} boom
         [\tsc{rel}P
-            [\tsc{rel}]
+            [\tsc{rel}P
+                [\phantom{xxx}, roof, baseline]
+            ]
             [\tsc{acc}P
                 [\tsc{f}2]
                 [\tsc{nom}P,
@@ -247,7 +253,9 @@ In Figure \ref{fig:nom-acc-intonly}, I give an example in which the relative pro
                 fit to=tree]{};
                 }
                     [\tsc{f}1]
-                    [ϕP, baseline]
+                    [ϕP
+                        [\phantom{xxx}, roof, baseline]
+                    ]
                 ]
             ]
         ]
@@ -280,14 +288,18 @@ In Figure \ref{fig:acc-nom-intonly}, I give an example in which the light head b
             fit to=tree]{};
             }
                 [\tsc{f}1]
-                [ϕP, baseline]
+                [ϕP
+                    [\phantom{xxx}, roof, baseline]
+                ]
             ]
         ]
       \end{forest}
       & \phantom{x} &
       \begin{forest} boom
         [\tsc{rel}P
-            [\tsc{rel}]
+            [\tsc{rel}P
+                [\phantom{xxx}, roof, baseline]
+            ]
             [\tsc{nom}P,
             tikz={
             \node[draw,circle,
@@ -296,7 +308,9 @@ In Figure \ref{fig:acc-nom-intonly}, I give an example in which the light head b
             fit to=tree]{};
             }
                 [\tsc{f}1]
-                [ϕP, baseline]
+                [ϕP
+                    [\phantom{xxx}, roof, baseline]
+                ]
             ]
         ]
       \end{forest}\\
@@ -312,29 +326,27 @@ The \tsc{nom}P of the light head forms a constituent within the relative pronoun
 The \tsc{nom}P of the relative pronoun forms a constituent within the relative pronoun, but the light head does not contain the feature \tsc{rel} that forms a \tsc{rel}P.
 As a result, none of the elements can be absent. I illustrate this by leaving the content of both dashed circles unfilled.
 
-
-\section{Changing constituency}
-
-The difference between the internal-only type and the matching type lies in when the internal case is more complex than the external case. In the internal-only type this is grammatical, and in the matching type, it is not. This means that the relative pronoun can only delete the light head when the two cases match. I show overview of the language in \ref{tbl:overview-rel-light-pol}.
+These comparisons correctly the derive the observed patterns in internal-only languages. Headless relatives in internal-only languages are grammatical when the internal and the external case match and when the internal case is more complex than the external case. They are ungrammatical when the external case is more complex than the internal case. That means that the relative pronoun can delete the light head, but the light head cannot delete the relative pronoun. I summarize this in \ref{tbl:overview-rel-light-mg}.
 
 \begin{table}[htbp]
   \center
-  \caption{Grammaticality in the matching type}
+  \caption{Grammaticality in the internal-only type}
 \begin{tabular}{cc}
   \toprule
-                                        & surface pronoun             \\
+                                        & surface pronoun         \\
   \cmidrule(lr){2-2}
-\tsc{k}\scsub{int} = \tsc{k}\scsub{ext} & \tsc{rp}\scsub{int} \\
-\tsc{k}\scsub{int} > \tsc{k}\scsub{ext} & *                           \\
-\tsc{k}\scsub{int} < \tsc{k}\scsub{ext} & *                           \\
+\tsc{k}\scsub{int} = \tsc{k}\scsub{ext} & \tsc{rp}\scsub{int/ext} \\
+\tsc{k}\scsub{int} > \tsc{k}\scsub{ext} & \tsc{rp}\scsub{int}     \\
+\tsc{k}\scsub{int} < \tsc{k}\scsub{ext} & *                       \\
 \bottomrule
 \end{tabular}
-\label{tbl:overview-rel-light-pol}
+\label{tbl:overview-rel-light-mg}
 \end{table}
 
-I derive this difference by placing the constituents that the relative pronoun and light heads consist of in a different order. This is a simplification of the real proposal, in which I derive the difference in constituency by movement from the same base structure.
 
-In the internal only type, the case features appear higher in the structure than the phi-features, as shown in Figure \ref{fig:rel-lh-intonly-rep}
+\subsection{The matching type}
+
+I continue with the matching type of language. In this type of language, the constituency is as shown in Figure \ref{fig:rel-lh-matching}.
 
 \begin{figure}[htbp]
   \center
@@ -343,42 +355,10 @@ In the internal only type, the case features appear higher in the structure than
       light head & & relative pronoun \\
       \cmidrule(lr){1-1} \cmidrule(lr){3-3}
       \begin{forest} boom
-      [\tsc{k}P,
-          [\tsc{k}]
+      [\tsc{k}P
           [ϕP
-              [ϕ, baseline]
+              [\phantom{xxx}, roof]
           ]
-      ]
-      \end{forest}
-      & \phantom{x} &
-    \begin{forest} boom
-      [\tsc{rel}P
-          [\tsc{rel}]
-          [\tsc{k}P
-              [\tsc{k}]
-              [ϕP
-                  [ϕ, baseline]
-              ]
-          ]
-      ]
-    \end{forest}\\
-      \bottomrule
-  \end{tabular}
-   \caption {\tsc{lh} and \tsc{rp} in the internal-only type (repeated)}
-  \label{fig:rel-lh-intonly-rep}
-\end{figure}
-
-I suggest that in the matching type, the case features appear lower in the structure than the phi features, as shown in Figure \ref{fig:rel-lh-matching}.
-
-\begin{figure}[htbp]
-  \center
-  \begin{tabular}[b]{ccc}
-      \toprule
-      light head & & relative pronoun \\
-      \cmidrule(lr){1-1} \cmidrule(lr){3-3}
-      \begin{forest} boom
-      [ϕP
-          [ϕ]
           [\tsc{k}P
               [\tsc{k}, baseline]
           ]
@@ -387,9 +367,13 @@ I suggest that in the matching type, the case features appear lower in the struc
       & \phantom{x} &
     \begin{forest} boom
       [\tsc{rel}P
-          [\tsc{rel}]
-          [ϕP
-              [ϕ]
+          [\tsc{rel}P
+              [\phantom{xxx}, roof, baseline]
+          ]
+          [\tsc{k}P
+              [ϕP
+                  [\phantom{xxx}, roof]
+              ]
               [\tsc{k}P
                   [\tsc{k}, baseline]
               ]
@@ -402,9 +386,7 @@ I suggest that in the matching type, the case features appear lower in the struc
   \label{fig:rel-lh-matching}
 \end{figure}
 
-This is a result of having multiple morphemes spelling out different portions of the structure instead of having a single morpheme spelling this structure out at once. In Chapter \ref{ch:deriving-onlyinternal} and \ref{ch:deriving-matching} I motivate this claim for Modern German and Polish.
-
-In this section, I show how this idea works out the matching type language. I discuss how the relative pronoun can still delete the light head when the internal and the external case match and how this does no longer work when the two cases differ.
+Just as in the internal-only type of language, the \tsc{rel}P has its own spellout and is merged as a prefix. The difference between the two language types lies in how the ϕP and the \tsc{k}P are spelled out. In the matching type of language, the ϕP and the \tsc{k}P both have their own spellout. As a result, the ϕP is moved over the \tsc{k}P (allowing the \tsc{k}P to form a constituent on its own, as only constituents can be spelled out). This crucially differs from the internal-only type of language, in which \tsc{k}P and ϕP are spelled out a by a single morpheme and no movement is taking place. In this section I show how this difference leads to different deletion possibilities and, therefore, to different grammaticality patterns. In Chapter \ref{ch:deriving-matching}, I motivate this analysis I put forward for the matching type of language.
 
 In Figure \ref{fig:nom-nom-matching}, I give an example in which the light head and the relative pronoun bear the same case.
 
@@ -415,7 +397,7 @@ In Figure \ref{fig:nom-nom-matching}, I give an example in which the light head 
     light head & & relative pronoun \\
     \cmidrule(lr){1-1} \cmidrule(lr){3-3}
     \begin{forest} boom
-      [ϕP,
+      [\tsc{nom}P,
       tikz={
       \node[draw,circle,
       dashed,
@@ -423,7 +405,9 @@ In Figure \ref{fig:nom-nom-matching}, I give an example in which the light head 
       scale=0.8,
       fit to=tree]{};
       }
-          [ϕ]
+          [ϕP
+              [\phantom{xxx}, roof]
+          ]
           [\tsc{nom}P
               [\tsc{f}1, baseline]
           ]
@@ -432,15 +416,19 @@ In Figure \ref{fig:nom-nom-matching}, I give an example in which the light head 
     & \phantom{x} &
     \begin{forest} boom
       [\tsc{rel}P
-          [\tsc{rel}]
-          [ϕP,
+          [\tsc{rel}P
+              [\phantom{xxx}, roof, baseline]
+          ]
+          [\tsc{nom}P,
           tikz={
           \node[draw,circle,
           dashed,
           scale=0.8,
           fit to=tree]{};
           }
-              [ϕ]
+              [ϕP
+                  [\phantom{xxx}, roof]
+              ]
               [\tsc{nom}P
                   [\tsc{f}1, baseline]
               ]
@@ -454,8 +442,8 @@ In Figure \ref{fig:nom-nom-matching}, I give an example in which the light head 
 \end{figure}
 
 I draw a dashed circle around each constituent that is a constituent in both the light head and the relative pronoun.
-In this instance it no problem that the phi-features appear higher in the structure than the case feature \tsc{f}1.
-The light head (the ϕP) still forms a constituent within the relative pronoun (the \tsc{rel}P), so the relative pronoun can delete the light head. I illustrate this by marking the content of the dashed circles for the light head gray.
+In this instance it no problem that the ϕP has moved over the \tsc{nom}P.
+The light head (the \tsc{nom}P) still forms a constituent within the relative pronoun (the \tsc{rel}P), so the relative pronoun can delete the light head. I illustrate this by marking the content of the dashed circles for the light head gray.
 
 In Figure \ref{fig:nom-acc-matching}, I give an example in which the relative pronoun bears a more complex case than the light head.
 
@@ -466,14 +454,15 @@ In Figure \ref{fig:nom-acc-matching}, I give an example in which the relative pr
     light head & & relative pronoun \\
     \cmidrule(lr){1-1} \cmidrule(lr){3-3}
     \begin{forest} boom
-      [ϕP, s sep=15mm
-          [ϕ,
+      [\tsc{nom}P, s sep=15mm
+          [ϕP,
           tikz={
           \node[draw,circle,
           dashed,
           scale=0.85,
           fit to=tree]{};
           }
+              [\phantom{xxx}, roof]
           ]
           [\tsc{nom}P,
           tikz={
@@ -489,15 +478,18 @@ In Figure \ref{fig:nom-acc-matching}, I give an example in which the relative pr
     & \phantom{x} &
     \begin{forest} boom
       [\tsc{rel}P
-          [\tsc{rel}]
-          [ϕP
-              [ϕ,
+          [\tsc{rel}P
+              [\phantom{xxx}, roof, baseline]
+          ]
+          [\tsc{acc}P
+              [ϕP,
               tikz={
               \node[draw,circle,
               dashed,
               scale=0.85,
               fit to=tree]{};
               }
+                  [\phantom{xxx}, roof]
               ]
               [\tsc{acc}P
                   [\tsc{f}2]
@@ -521,8 +513,8 @@ In Figure \ref{fig:nom-acc-matching}, I give an example in which the relative pr
 \end{figure}
 
 I draw a dashed circle around each constituent that is a constituent in both the light head and the relative pronoun.
-The light head (the ϕP) no longer forms a constituent within the relative pronoun (the \tsc{rel}P). Therefore, the relative pronoun cannot delete the light head, which I illustrate this by leaving the content of both dashed circles unfilled.
-It shows that in this instance it is a problem problem that the phi-features appear higher in the structure than the case features.
+The light head (the \tsc{nom}P) no longer forms a constituent within the relative pronoun (the \tsc{rel}P). Therefore, the relative pronoun cannot delete the light head, which I illustrate this by leaving the content of both dashed circles unfilled.
+It shows that in this instance it is a problem the ϕP has moved over the \tsc{nom}P or \tsc{acc}P.
 
 Something else the example shows is the necessity to formulate the proposal in terms of constituent containment instead of feature containment. To illustrate the difference, I show the example from the internal-only type in which the relative pronoun could delete the light head in Figure \ref{fig:nom-acc-intonly-rep}, repeated from \ref{fig:nom-acc-intonly}.
 
@@ -543,14 +535,16 @@ Something else the example shows is the necessity to formulate the proposal in t
         }
             [\tsc{f}1]
             [ϕP
-                [ϕ, baseline]
+                [\phantom{xxx}, roof, baseline]
             ]
         ]
       \end{forest}
       & \phantom{x} &
       \begin{forest} boom
         [\tsc{rel}P
-            [\tsc{rel}]
+            [\tsc{rel}P
+                [\phantom{xxx}, roof, baseline]
+            ]
             [\tsc{acc}P
                 [\tsc{f}2]
                 [\tsc{nom}P,
@@ -562,7 +556,7 @@ Something else the example shows is the necessity to formulate the proposal in t
                 }
                     [\tsc{f}1]
                     [ϕP
-                        [ϕ, baseline]
+                        [\phantom{xxx}, roof, baseline]
                     ]
                 ]
             ]
@@ -575,11 +569,11 @@ Something else the example shows is the necessity to formulate the proposal in t
 \end{figure}
 
 In Figure \ref{fig:nom-acc-intonly-rep}, two different types of containment hold: feature containment and constituent containment.
-I start with feature containment. Each feature of the light head (i.e. ϕ and \tsc{f}1) is also a feature within the relative pronoun. Therefore, the relative pronoun contains the light head.
+I start with feature containment. Each feature of the light head (i.e. features contained in ϕP and \tsc{f}1) is also a feature within the relative pronoun. Therefore, the relative pronoun contains the light head.
 Constituent containment works as follows. The \tsc{nom}P forms a constituent within the \tsc{rel}P. Therefore, the relative pronoun contains contains the light head.
 
 Consider Figure \ref{fig:nom-acc-matching} again. Here feature containment holds, but constituent containment does not.
-The light head and the relative pronoun contain exactly the same features as in \ref{fig:nom-acc-intonly-rep}, so also here each feature of the light head (i.e. ϕ and \tsc{f}1) is also a feature within the relative pronoun
+The light head and the relative pronoun contain exactly the same features as in \ref{fig:nom-acc-intonly-rep}, so also here each feature of the light head (i.e. features contained in ϕP and \tsc{f}1) is also a feature within the relative pronoun
 However, the features are structured differently, in such a way that the light head does no longer form a single constituent within the relative pronoun.
 
 In sum, constituent containment is a stronger requirement than feature containment. Only this stronger requirement is able to distinguish the internal-only from the matching type. Therefore, this account crucially relies on constituent containment being the containment requirement that needs to be fulfilled.
@@ -706,10 +700,102 @@ The adjective \tit{leel} `white' does not forms a constituent with \tit{kaarii} 
    \label{fig:kipsigis-houses}
 \end{figure}
 
-In conclusion, a deleted phrase must form a single constituent within the deleting phrase. For light heads and relative pronouns that means that the light head must form a single constituent within the relative pronoun.
+This observation regarding the deletion of nominal modifiers provides independent evidence for my assumption that constituent containment is the crucial requirement for deletion of the light head or the relative pronoun in headless relatives.
+
+For completeness, I give an example in which the light head bears a more complex case than the relative pronoun in Figure
+
+\begin{figure}[htbp]
+  \center
+  \begin{tabular}[b]{ccc}
+    \toprule
+    light head & & relative pronoun \\
+    \cmidrule(lr){1-1} \cmidrule(lr){3-3}
+    \begin{forest} boom
+      [\tsc{acc}P
+          [ϕP,
+          tikz={
+          \node[draw,circle,
+          dashed,
+          scale=0.85,
+          fit to=tree]{};
+          }
+              [\phantom{xxx}, roof]
+          ]
+          [\tsc{acc}P
+              [\tsc{f}2]
+              [\tsc{nom}P,
+              tikz={
+              \node[draw,circle,
+              dashed,
+              scale=0.85,
+              fit to=tree]{};
+              }
+                  [\tsc{f}1, baseline]
+              ]
+          ]
+      ]
+    \end{forest}
+    & \phantom{x} &
+    \begin{forest} boom
+      [\tsc{rel}P
+          [\tsc{rel}P
+              [\phantom{xxx}, roof, baseline]
+          ]
+          [\tsc{nom}P, s sep=15mm
+              [ϕP,
+              tikz={
+              \node[draw,circle,
+              dashed,
+              scale=0.85,
+              fit to=tree]{};
+              }
+                  [\phantom{xxx}, roof]
+              ]
+              [\tsc{nom}P,
+              tikz={
+              \node[draw,circle,
+              dashed,
+              scale=0.85,
+              fit to=tree]{};
+              }
+                  [\tsc{f}1, baseline]
+              ]
+          ]
+      ]
+    \end{forest}\\
+    \bottomrule
+  \end{tabular}
+  \caption {\tsc{ext}\scsub{acc} vs. \tsc{int}\scsub{nom} in the matching type}
+ \label{fig:acc-nom-matching}
+\end{figure}
+
+I draw a dashed circle around each constituent that is a constituent in both the light head and the relative pronoun.
+Neither the light head nor the relative pronoun forms a constituent within the other element. It is even the case that both contain features that the other one does not contain.
+The relative pronoun cannot delete the light head, which I illustrate this by leaving the content of both dashed circles unfilled.
+
+The comparisons between the constituents within the light heads and the relative pronouns correctly derive the patterns observed in the matching type of language.
+In matching languages, headless relatives are only grammatical when the internal and the external case match. When one of them is more complex than the other one, there is no longer a grammatical outcome possible. I summarize this in \ref{tbl:overview-rel-light-pol}.
+
+\begin{table}[htbp]
+  \center
+  \caption{Grammaticality in the matching type}
+\begin{tabular}{cc}
+  \toprule
+                                        & surface pronoun             \\
+  \cmidrule(lr){2-2}
+\tsc{k}\scsub{int} = \tsc{k}\scsub{ext} & \tsc{rp}\scsub{int} \\
+\tsc{k}\scsub{int} > \tsc{k}\scsub{ext} & *                           \\
+\tsc{k}\scsub{int} < \tsc{k}\scsub{ext} & *                           \\
+\bottomrule
+\end{tabular}
+\label{tbl:overview-rel-light-pol}
+\end{table}
 
 
-\section{Syncretism}
+
+
+
+\subsection{The unrestricted type}
 
 The difference between the internal-only type and the unrestricted type lies in when the external case is more complex than the internal case. In the internal-only type this is ungrammatical, and in the unrestricted type, it is grammatical. This means that the light head can delete the relative pronoun when its case is more complex. I show overview of the language in \ref{tbl:overview-rel-light-ohg}.
 
@@ -732,7 +818,7 @@ In order to let the relative pronoun form a constituent within the light head, I
 Another option is that the relative pronoun does not actually form a constituent within the light head. Instead, the relative features form a separate constituent which is not deleted. In this chapter I only discuss the situation in which the relative pronoun as a whole forms a constituent within the light head, and the relative pronoun is deleted as a whole. I return to the deletion of separate constituents in Chapter \ref{ch:discussing-unrestricted}.
 }
 I start with the change in constituency. Again, what I display here is a simplification of the real proposal, in which I derive the difference in constituency by movement from the same base structure.
-In the internal only type, the case features appear between the phi-features and the relative features, as shown in Figure \ref{fig:rel-lh-intonly-rep}
+In the internal only type, the case features appear between the phi-features and the relative features, as shown in Figure \ref{fig:rel-lh-intonly-rep1}
 
 \begin{figure}[htbp]
   \center
@@ -751,7 +837,9 @@ In the internal only type, the case features appear between the phi-features and
       & \phantom{x} &
     \begin{forest} boom
       [\tsc{rel}P
-          [\tsc{rel}]
+          [\tsc{rel}P
+              [\phantom{xxx}, roof, baseline]
+          ]
           [\tsc{k}P
               [\tsc{k}]
               [ϕP
@@ -1068,7 +1156,9 @@ In Figure \ref{fig:acc-nom-syn}, I give an example in which the light head bears
       & \phantom{x} &
       \begin{forest} boom
         [\tsc{rel}P
-            [\tsc{rel}]
+            [\tsc{rel}P
+                [\phantom{xxx}, roof, baseline]
+            ]
             [\tsc{nom}P,
             tikz={
             \node[draw,circle,
